--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -526,7 +526,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>search_presentation</artifactId>
-            <version>1.0.33</version>
+            <version>1.0.34-SNAPSHOT</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
