--- a/common_services/search_presentation/pom.xml
+++ b/common_services/search_presentation/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.37</version>
+		<version>1.0.38-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>search_presentation</artifactId>
 	<name>search_presentation</name>
-	<version>1.0.34</version>
+	<version>1.0.35-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/common_services-1.0.37</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37/tags/search_presentation-1.0.15</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/search_presentation-1.0.15</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/search_presentation-1.0.15</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/search_presentation-1.0.15</url>
 	</scm>
 	<build>
 		<plugins>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>search</artifactId>
-			<version>1.0.35</version>
+			<version>1.0.36-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
