--- a/common_services/syndication_ear/pom.xml
+++ b/common_services/syndication_ear/pom.xml
@@ -4,18 +4,18 @@
     <parent>
         <artifactId>common_services</artifactId>
         <groupId>de.mpg.escidoc.services</groupId>
-        <version>1.0.37</version>
+        <version>1.0.38-SNAPSHOT</version>
     </parent>
     <groupId>de.mpg.escidoc.services</groupId>
     <artifactId>syndication_ear</artifactId>
-    <version>1.0.19</version>
+    <version>1.0.20-SNAPSHOT</version>
     <name>syndication_ear</name>
     <packaging>ear</packaging>
 
     <scm>
-        <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37/syndication_ear</connection>
-        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37/syndication_ear</developerConnection>
-        <url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37</url>
+        <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_ear</connection>
+        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/syndication_ear</developerConnection>
+        <url>https://zim02.gwdg.de/repos/common/</url>
     </scm>
 
     <build>
@@ -300,47 +300,47 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.38</version>
+            <version>1.0.39-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.35</version>
+            <version>1.1.36-SNAPSHOT</version>
             <scope>test</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>search_presentation</artifactId>
-        	<version>1.0.34</version>
+        	<version>1.0.35-SNAPSHOT</version>
         	<scope>test</scope>
         	<type>war</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>syndication_presentation</artifactId>
-            <version>1.0.16</version>
+            <version>1.0.17-SNAPSHOT</version>
             <scope>test</scope>
             <type>war</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>search</artifactId>
-        	<version>1.0.35</version>
+        	<version>1.0.36-SNAPSHOT</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>structuredexportmanager</artifactId>
-        	<version>1.0.38</version>
+        	<version>1.0.39-SNAPSHOT</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
         <dependency>
         	<groupId>de.mpg.escidoc.services</groupId>
         	<artifactId>citationmanager</artifactId>
-        	<version>1.0.41</version>
+        	<version>1.0.42-SNAPSHOT</version>
             <scope>test</scope>
         	<type>ejb</type>
         </dependency>
