--- a/common_services/validation/pom.xml
+++ b/common_services/validation/pom.xml
@@ -2,19 +2,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.37</version>
+		<version>1.0.38-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>validation</artifactId>
 	<name>validation</name>
 	<packaging>ejb</packaging>
-	<version>1.0.39</version>
+	<version>1.0.40-SNAPSHOT</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37/validation</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37/validation</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.37</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/validation</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/validation</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/</url>
 	</scm>
 
 	<build>
@@ -72,7 +72,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.35</version>
+			<version>1.1.36-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
