--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -444,7 +444,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.38</version>
+            <version>1.0.39-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -457,7 +457,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>citationmanager</artifactId>
-            <version>1.0.41</version>
+            <version>1.0.42-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -471,7 +471,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>structuredexportmanager</artifactId>
-            <version>1.0.38</version>
+            <version>1.0.39-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
