--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -478,7 +478,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation</artifactId>
-            <version>1.0.39</version>
+            <version>1.0.40-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
