--- a/common_services/structuredexportmanager_ear/src/main/resources/common.properties
+++ b/common_services/structuredexportmanager_ear/src/main/resources/common.properties
@@ -4,3 +4,18 @@ escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
+
+framework.admin.username=${framework.admin.username}
+framework.admin.password=${framework.admin.password}
+
+framework.librarian.username=${framework.librarian.username}
+framework.librarian.password=${framework.librarian.password}
+
+framework.author.username=${framework.author.username}
+framework.author.password=${framework.author.password}
+
+framework.editor.username=${framework.editor.username}
+framework.editor.password=${framework.editor.password}
+
+framework.scientist.username=${framework.scientist.username}
+framework.scientist.password=${framework.scientist.password}
