--- a/common_services/citationmanager/src/main/resources/CitationStyles/functions.properties
+++ b/common_services/citationmanager/src/main/resources/CitationStyles/functions.properties
@@ -4,6 +4,7 @@
 # Converts name to the initials    
 get_initials = public String get_initials(String str) {\
 		//if (isCJK(str)) return str;\n\
+		if (str==null || str.length()==0) return "";\
 		StringTokenizer st = new StringTokenizer(str, " .-");\
 		String res = "";\
 		String dlmtr = str.indexOf('-') != -1 ? "-" : " ";\
