--- a/common_services/cone_presentation/src/main/webapp/WEB-INF/web.xml
+++ b/common_services/cone_presentation/src/main/webapp/WEB-INF/web.xml
@@ -1,20 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app id="WebApp_ID">
+<web-app id="CoNE">
 	<display-name>Control of Named Entities</display-name>
-	
-	<filter>
-	    <filter-name>UrlRewriteFilter</filter-name>
-	    <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
-	    <init-param>
-	        <param-name>logLevel</param-name>
-	        <param-value>ERROR</param-value>
-	    </init-param>
-	</filter>
-	<filter-mapping>
-	    <filter-name>UrlRewriteFilter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	</filter-mapping>
 	
 	<!-- CoNE Servlets -->
 	<servlet>
@@ -24,47 +11,17 @@
 	
 	<servlet-mapping>
 		<servlet-name>jsp</servlet-name>
-		<url-pattern>*.jsp</url-pattern>
+		<url-pattern>/jsp/*</url-pattern>
 	</servlet-mapping>
 
-	<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>/cone-action/*</url-pattern>
-	</servlet-mapping>
-
-	<!--<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>*.jquery</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>*.options</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>*.json</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>*.rdf</url-pattern>
-	</servlet-mapping>
-	
-	<servlet-mapping>
-		<servlet-name>ConeServlet</servlet-name>
-		<url-pattern>*.default</url-pattern>
-	</servlet-mapping>-->
-	
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
 		<url-pattern>/files/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>ConeServlet</servlet-name>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 	<!-- Welcome files -->
