--- a/common_services/pid_cache_presentation/pom.xml
+++ b/common_services/pid_cache_presentation/pom.xml
@@ -34,6 +34,12 @@
             <scope>compile</scope>
         </dependency>
 		<dependency>
+            <groupId>de.mpg.escidoc.services</groupId>
+            <artifactId>common_logic</artifactId>
+            <version>1.1.36-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.0.1</version>
