New Feature: PUBMAN-1338 : Browse by ... - Implementation

--- a/pubman/pubman_presentation/src/main/resources/pubman.properties
+++ b/pubman/pubman_presentation/src/main/resources/pubman.properties
@@ -73,3 +73,5 @@ escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.i
 
 # COntrolled Named Entities database interface class
 cone.querier.class=${cone.querier.class}
+
+escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
