added new property for browse by subject

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -196,3 +196,5 @@ escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 
 <!-- version of the pubman cookie (has to be changed if style information is changed)-->
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
+
+escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
