--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -550,6 +550,8 @@
 				<escidoc.cone.maximum.results>50</escidoc.cone.maximum.results>
 				<escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
 				<escidoc.cone.modelsxml.path>models.xml</escidoc.cone.modelsxml.path>
+				<!-- Vocabularies which wil be integrated inot Borwse by, seperator is ;-->
+				<escidoc.cone.subjectVocab>ddc</escidoc.cone.subjectVocab>
 				
 				<!-- Import database -->
 				<escidoc.import.database.driver.class>org.hsqldb.jdbcDriver</escidoc.import.database.driver.class>
@@ -764,6 +766,8 @@
 				<escidoc.cone.maximum.results>50</escidoc.cone.maximum.results>
 				<escidoc.cone.service.url>http://dev-pubman.mpdl.mpg.de/cone/</escidoc.cone.service.url>
 				<escidoc.cone.modelsxml.path>models.xml</escidoc.cone.modelsxml.path>
+				<!-- Vocabularies which wil be integrated inot Borwse by, seperator is ; -->
+				<escidoc.cone.subjectVocab>ddc</escidoc.cone.subjectVocab>
 				
 				<!-- Import database -->
 				<escidoc.import.database.driver.class>org.hsqldb.jdbcDriver</escidoc.import.database.driver.class>
