Added PID cache modules

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -196,6 +196,8 @@
         <module>syndication_ear</module>
         <module>syndication_presentation</module>
         <module>sword_presentation</module>
+        <module>pid_cache_presentation</module>
+        <module>pid_cache_ear</module>
 
     </modules>
 
