--- a/common_services/pid_cache_ear/src/test/resources/pubman.properties
+++ b/common_services/pid_cache_ear/src/test/resources/pubman.properties
@@ -3,7 +3,8 @@ escidoc.pidcache.cache.size.max=5
 escidoc.pidcache.refresh.interval=1
 escidoc.pidcache.dummy.url=http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=
 escidoc.pid.gwdg.service.url=http://handle.gwdg.de:8080/pidservice
-escidoc.pidcache.service.url=http://localhost:8080/pid_cache_presentation/handle
+escidoc.pid.gwdg.timeout=1000
+escidoc.pid.pidcache.service.url=http://localhost:8080/pid_cache_presentation/handle
 escidoc.pid.service.create.path=/write/create
 escidoc.pid.service.view.path=/read/view
 escidoc.pid.service.delete.path=/write/delete
