Ready for testing on dev

--- a/common_services/pid_cache_ear/pom.xml
+++ b/common_services/pid_cache_ear/pom.xml
@@ -28,7 +28,7 @@
 						<webModule>
 							<groupId>de.mpg.escidoc.services</groupId>
 							<artifactId>pid_cache_presentation</artifactId>
-							<contextRoot>/handle</contextRoot>
+							<contextRoot>pid_cache_presentation</contextRoot>
 						</webModule>
 						<jarModule>
 							<groupId>org.jibx</groupId>
