--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -198,3 +198,18 @@ escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
 escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
+
+<!-- PID cache -->
+escidoc.pidcache.cache.size.max=${escidoc.pidcache.cache.size.max}
+escidoc.pidcache.refresh.interval=${escidoc.pidcache.refresh.interval}
+escidoc.pidcache.dummy.url=${escidoc.pidcache.dummy.url}
+escidoc.pid.gwdg.service.url=${escidoc.pid.gwdg.service.url}
+escidoc.pid.gwdg.timeout=${escidoc.pid.gwdg.timeout}
+escidoc.pid.pidcache.service.url=${escidoc.pid.pidcache.service.url}
+escidoc.pid.service.create.path=${escidoc.pid.service.create.path}
+escidoc.pid.service.view.path=${escidoc.pid.service.view.path}
+escidoc.pid.service.delete.path=${escidoc.pid.service.delete.path}
+escidoc.pid.service.update.path=${escidoc.pid.service.update.path}
+escidoc.pid.service.search.path=${escidoc.pid.service.search.path}
+escidoc.pid.gwdg.user.login=${escidoc.pid.gwdg.user.login}
+escidoc.pid.gwdg.user.password=${escidoc.pid.gwdg.user.password}
