--- a/common_services/citationmanager/src/main/resources/CitationStyles/Jus/test.properties
+++ b/common_services/citationmanager/src/main/resources/CitationStyles/Jus/test.properties
@@ -8,6 +8,7 @@ ignore.multiply.spaces=yes
 #data.source.user=citman_user
 #data.source.password=citman_user
 snippet.placeholder.xpath=/item-list/item/properties/content-model-specific/bibliographicCitation 
+data.source.filename=CitationStyleJusTestCollection.xml
 data.source.expected.key=JUS: 
 data.source.expected.xpath=//publication/abstract[contains(.,'JUS: ')]
 #data.source.filter = <param>\
