--- a/common_services/citationmanager/src/main/resources/CitationStyles/AJP/test.properties
+++ b/common_services/citationmanager/src/main/resources/CitationStyles/AJP/test.properties
@@ -8,6 +8,7 @@ ignore.multiply.spaces=yes
 #data.source.user=citman_user
 #data.source.password=citman_user
 snippet.placeholder.xpath=//content-model-specific/bibliographicCitation 
+data.source.filename=CitationStyleTestCollection.xml
 data.source.expected.key=AJP: 
 data.source.expected.xpath=//publication/abstract[contains(.,'AJP: ')]
 #data.source.filter = <param>\
