--- a/common_services/citationmanager/src/test/resources/pubman.properties
+++ b/common_services/citationmanager/src/test/resources/pubman.properties
@@ -6,3 +6,9 @@ escidoc.framework_access.content-model.id.publication=${escidoc.framework_access
 
 framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
+
+xsd.soap.item.item=${xsd.soap.item.item}
+
+
+# CoNE service URL
+escidoc.cone.service.url=${escidoc.cone.service.url}
