Modification of service response to provide a location info, ready to be test on real environment.

--- a/common_services/pid_cache_ear/src/main/resources/pubman.properties
+++ b/common_services/pid_cache_ear/src/main/resources/pubman.properties
@@ -4,7 +4,7 @@ escidoc.pidcache.refresh.interval=1
 escidoc.pidcache.dummy.url=http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=
 escidoc.pid.gwdg.service.url=http://handle.gwdg.de:8080/pidservice
 escidoc.pid.gwdg.timeout=10000
-escidoc.pid.pidcache.service.url=http://localhost:8080/pid_cache_presentation/handle
+escidoc.pid.pidcache.service.url=http://localhost:8080/pidcache/handle
 escidoc.pid.service.create.path=/write/create
 escidoc.pid.service.view.path=/read/view
 escidoc.pid.service.delete.path=/write/delete
