--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -516,7 +516,7 @@
 				<escidoc.pubman.sitemap.retrieve.timeout>20</escidoc.pubman.sitemap.retrieve.timeout>
 
 				<!-- URL of the FIZ framework instance -->
-				<escidoc.common.framework.url>http://coreservice.mpdl.mpg.de:8080</escidoc.common.framework.url>
+				<escidoc.common.framework.url>http://dev-coreservice.mpdl.mpg.de</escidoc.common.framework.url>
 				
 				<!-- Identifier of the content type "publication" in the actual framework instance -->
 				<escidoc.framework_access.content-model.id.publication>escidoc:persistent4</escidoc.framework_access.content-model.id.publication>
@@ -748,7 +748,7 @@
                 <escidoc.pubman.sitemap.retrieve.timeout>20</escidoc.pubman.sitemap.retrieve.timeout>
 
 				<!-- URL of the FIZ framework instance -->
-				<escidoc.common.framework.url>http://dev-coreservice.mpdl.mpg.de:8080</escidoc.common.framework.url>
+				<escidoc.common.framework.url>http://dev-coreservice.mpdl.mpg.de</escidoc.common.framework.url>
 
 				<!-- Identifier of the content type "publication" in the actual framework instance -->
 				<escidoc.framework_access.content-model.id.publication>escidoc:persistent4</escidoc.framework_access.content-model.id.publication>
