--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -105,7 +105,7 @@
     	 <dependency>
 			<groupId>xmlbeans</groupId>
 			<artifactId>escidoc-core</artifactId>
-			<version>1.1.0</version>
+			<version>1.2rc1</version>
 			<scope>provided</scope>
 		</dependency>
     	<dependency>
