pubman instance url is added

--- a/common_services/citationmanager/src/test/resources/pubman.properties
+++ b/common_services/citationmanager/src/test/resources/pubman.properties
@@ -1,5 +1,8 @@
 # URL of the FIZ framework instance (faces: https://escidoc1.escidoc.mpg.de/index.php/FIZ_Framework)
-escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
+
+#PubmanInstance URL
+escidoc.pubman.instance.url=${escidoc.pubman.instance.url}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -8,7 +11,6 @@ framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
 
 xsd.soap.item.item=${xsd.soap.item.item}
-
 
 # CoNE service URL
 escidoc.cone.service.url=${escidoc.cone.service.url}
