--- a/common_services/citationmanager/src/test/resources/pubman.properties
+++ b/common_services/citationmanager/src/test/resources/pubman.properties
@@ -3,6 +3,7 @@ escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 
 #PubmanInstance URL
 escidoc.pubman.instance.url=${escidoc.pubman.instance.url}
+#escidoc.pubman.instance.context.path=${escidoc.pubman.instance.context.path}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -13,4 +14,5 @@ framework.admin.password=${framework.admin.password}
 xsd.soap.item.item=${xsd.soap.item.item}
 
 # CoNE service URL
-escidoc.cone.service.url=${escidoc.cone.service.url}
+#escidoc.cone.service.url=${escidoc.cone.service.url}
+escidoc.cone.service.url=http://dev-pubman.mpdl.mpg.de/cone/
